Update FileMonitor.csproj - For the "copy to output directory" files, switch from "Always" to "PreserveNewest." This ensures the settings file doesn't get overwritten every time the project is rebuilt.

--- a/FileMonitor/FileMonitor.csproj
+++ b/FileMonitor/FileMonitor.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-	  <UseWindowsForms>true</UseWindowsForms>
-	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
+      <UseWindowsForms>true</UseWindowsForms>
+      <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,10 +20,10 @@
 
   <ItemGroup>
     <None Update="App.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Settings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
