--- a/FileMonitor/App.config
+++ b/FileMonitor/App.config
@@ -4,5 +4,6 @@
 	</connectionStrings>
 	<appSettings>
 		<add key="DatabasePath" value="C:\Users\Public\FileMonitor\FMDB.sqlite"/>
+		<add key="DatabaseDir" value="C:\Users\Public\FileMonitor"/>
 	</appSettings>
 </configuration>
