--- a/FileMonitor/FileMonitor.csproj
+++ b/FileMonitor/FileMonitor.csproj
@@ -22,7 +22,7 @@
     <None Update="App.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Settings.json">
+    <None Update="Helpers\Settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
