Add comment to gitignore, specifying where the qfailure file comes from

--- a/.gitignore
+++ b/.gitignore
@@ -368,4 +368,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Auto-generated from the Windows Service Control manager
 /qfailure
