--- a/FileMonitorBackgroundService/FileMonitorBackgroundService.csproj
+++ b/FileMonitorBackgroundService/FileMonitorBackgroundService.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 </Project>
