Fix issue where the published version of BackgroundService fails - Use the `ConfigurationManager.OpenExeConfiguration` method to manually load the config file into a `Configuration` class. - Add a new config file to the main `FileMonitor` project and the `BackgroundService` project, titled `FileMonitor.exe.config` and `FileMonitorBackgroundService.exe.config` respectively - Update the CS project files so the original `App.config` file has the entry: `<ExcludeFromSingleFile>true</ExcludeFromSingleFile>` - Update CS project file so the new `FileMonitorBackgroundService.exe.config` file has the entry: `<CopyToPublishDirectory>Always</CopyToPublishDirectory>` - Load the appropriate config file in the `RepositoryHelper` based on the main exe filename, then get the connection string from the `Configuration` object. - According to a StackOverflow post (see link below), when running a published .NET app, the issue stems from the config file being loaded into a temp folder instead of the current working directory, which explains why the service failed with a null reference exception. Source: https://stackoverflow.com/questions/58431097/publishing-a-standalone-exe-file-with-net-core-3-0-and-using-an-app-config/58432987#58432987

--- a/FileMonitor/FileMonitor.csproj
+++ b/FileMonitor/FileMonitor.csproj
@@ -19,8 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="App.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="App.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </None>
+    <None Include="FileMonitor.exe.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
