--- a/FileMonitorBackgroundService/FileMonitorBackgroundService.csproj
+++ b/FileMonitorBackgroundService/FileMonitorBackgroundService.csproj
@@ -16,7 +16,11 @@
 
   <ItemGroup>
     <None Include="App.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </None>
+    <None Include="FileMonitorBackgroundService.exe.config">
+        <CopyToPublishDirectory>Always</CopyToPublishDirectory>
     </None>
   </ItemGroup>
 
